elo and top players added

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ client4
 Client/client.o
 Server2/awale.o
 Server2/server2.o
+Database/Games/momo_vs_mi_20241121_164217.txt
+Database/Games/momo_vs_Dja_20241121_162819.txt
+Database/Games/mi_vs_mo_20241121_162803.txt
+Database/Games/mi_vs_mo_20241119_110712.txt
+Database/Games/Dja_vs_momo_20241119_110631.txt
